--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ body {
   padding: 0;
   font-family: 'Lexend Deca', sans-serif;
   font-size: 15px;
+  letter-spacing: .5px;
+  line-height: 1.6;
 }
 
 .stats-container {
@@ -67,18 +69,18 @@ body {
   font-family: 'Lexend Deca', sans-serif;
   font-size: 12px;
   text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 .box-right {
   width: 50%;
   height: 100%;
-}
-.box-right img {
-  height: 100%;
-  width: 100%;
-  border-top-right-radius: 10px;
+  background: url('./images/image-header-desktop.jpg');
+  background-size: 100% 100%;
   border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
 }
+
 
 .attribution {
   margin-bottom: 20px;
@@ -91,5 +93,54 @@ body {
 
 /* MOBILE DEVICES */
 @media(max-width: 375px) {
+  body {
+    height: auto;
+  }
+  .container {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    margin-top: 80px;
+    width: 90%;
+    height: 900px;
+  }
 
+  .box-right {
+    width: 100%;
+    height: 30%;
+    background: url('./images/image-header-mobile.jpg');
+    background-size: 100% 100%;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 0;
+  }
+
+  .box-left {
+    width: calc(100% - 40px);
+    height: 70%;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 20px;
+    margin: 40px 0 0 0;
+  }
+  .box-left h1 {
+    text-align: center;
+  }
+  .description {
+    justify-content: center;
+  }
+
+  .stats-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .stat {
+    height: 75px;
+    margin: 0;
+    padding: 0;
+  }
+
+  .attribution {
+    padding: 20px;
+    margin: 20px 0;
+    text-align: center;
+  }
 }
